add timezone selector

--- a/calendar_test.html
+++ b/calendar_test.html
@@ -27,6 +27,7 @@
   <script src="./Mysterium Schedule (Dan Test) – Mysterium_files/wp-emoji-release.min.js.download"
     type="text/javascript" defer=""></script>
   <script type="text/javascript" src="mysterium_calendar.js"></script>
+  <script type="text/javascript" src="mysterium_timezone_select.js"></script>
   <style type="text/css">
     img.wp-smiley,
     img.emoji {
